--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,24 @@ img {
     transition: .3s;
 }
 
+.slide:hover{
+    will-change: transform;
+}
+
 .slide li{
     flex-shrink: 0;
     width: 80vw;
     max-width: 800px;
     margin: 0 20px;
+    opacity: .7;
+    transform: scale(.7);
+    transition: .4s;
+    border-radius: 4px;
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0,0,0,.4);
+}
+
+.slide li.active{
+    opacity: 1;
+    transform: scale(1);
 }
